.provarCaches/00D6C0000000xA6UAI/objects/sked__Holiday__c.object
<CustomObject>
    <fields>
        <fullName>sked__End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sked__Global__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Holiday across the whole organisation?</description>
        <inlineHelpText>Is the Holiday across the whole organisation?</inlineHelpText>
        <label>Global</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked__Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Holiday</label>
    <listViews>
        <fullName>sked__All</fullName>
        <columns>NAME</columns>
        <columns>sked__Start_Date__c</columns>
        <columns>sked__End_Date__c</columns>
        <columns>sked__Global__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Holiday Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holidays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>sked__StartDate_Before_EndDate</fullName>
        <active>true</active>
        <errorConditionFormula>sked__End_Date__c &lt; sked__Start_Date__c</errorConditionFormula>
        <errorMessage>End Date must be greater than Start Date</errorMessage>
    </validationRules>
</CustomObject>